--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,80 @@
 /ProjectPlanner.CQRS/.vs/ProjectPlanner.CQRS/v17/.suo
 /ProjectPlanner.CQRS/.vs/ProjectPlanner.CQRS/v17/DocumentLayout.json
 /ProjectPlanner.CQRS/ProjectPlanner.Api/obj/Debug/net8.0
+AWSSDK.Core.dll
+AWSSDK.Extensions.NETCore.Setup.dll
+AWSSDK.S3.dll
+FluentValidation.dll
+Microsoft.AspNetCore.OpenApi.dll
+Microsoft.Extensions.Caching.Abstractions.dll
+Microsoft.Extensions.Caching.Memory.dll
+Microsoft.Extensions.Configuration.Abstractions.dll
+Microsoft.Extensions.DependencyInjection.Abstractions.dll
+Microsoft.Extensions.Logging.Abstractions.dll
+Microsoft.Extensions.Options.dll
+Microsoft.Extensions.Primitives.dll
+Microsoft.OpenApi.dll
+ProjectPlanner.Api.deps.json
+ProjectPlanner.Api.dll
+ProjectPlanner.Api.exe
+ProjectPlanner.Api.pdb
+ProjectPlanner.Api.runtimeconfig.json
+ProjectPlanner.Commands.dll
+ProjectPlanner.Commands.pdb
+ProjectPlanner.Domain.dll
+ProjectPlanner.Domain.pdb
+ProjectPlanner.Queries.dll
+ProjectPlanner.Queries.pdb
+Swashbuckle.AspNetCore.Swagger.dll
+Swashbuckle.AspNetCore.SwaggerGen.dll
+Swashbuckle.AspNetCore.SwaggerUI.dll
+System.Diagnostics.DiagnosticSource.dll
+appsettings.Development.json
+appsettings.json
+ProjectPlanner.Api.csproj.nuget.dgspec.json
+ProjectPlanner.Api.csproj.nuget.g.props
+ProjectPlanner.Api.csproj.nuget.g.targets
+project.assets.json
+project.nuget.cache
+ProjectPlanner.Commands.deps.json
+.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+ProjectP.3F75172D.Up2Date
+ProjectPlanner.Commands.AssemblyInfo.cs
+ProjectPlanner.Commands.AssemblyInfoInputs.cache
+ProjectPlanner.Commands.GeneratedMSBuildEditorConfig.editorconfig
+ProjectPlanner.Commands.GlobalUsings.g.cs
+ProjectPlanner.Commands.assets.cache
+ProjectPlanner.Commands.csproj.AssemblyReference.cache
+ProjectPlanner.Commands.csproj.CoreCompileInputs.cache
+ProjectPlanner.Commands.csproj.FileListAbsolute.txt
+ProjectPlanner.Commands.sourcelink.json
+ProjectPlanner.Commands.csproj.nuget.dgspec.json
+ProjectPlanner.Commands.csproj.nuget.g.props
+ProjectPlanner.Commands.csproj.nuget.g.targets
+ProjectPlanner.Domain.deps.json
+ProjectPlanner.Domain.AssemblyInfo.cs
+ProjectPlanner.Domain.AssemblyInfoInputs.cache
+ProjectPlanner.Domain.GeneratedMSBuildEditorConfig.editorconfig
+ProjectPlanner.Domain.GlobalUsings.g.cs
+ProjectPlanner.Domain.assets.cache
+ProjectPlanner.Domain.csproj.AssemblyReference.cache
+ProjectPlanner.Domain.csproj.CoreCompileInputs.cache
+ProjectPlanner.Domain.csproj.FileListAbsolute.txt
+ProjectPlanner.Domain.sourcelink.json
+ProjectPlanner.Domain.csproj.nuget.dgspec.json
+ProjectPlanner.Domain.csproj.nuget.g.props
+ProjectPlanner.Domain.csproj.nuget.g.targets
+ProjectPlanner.Queries.deps.json
+ProjectP.BC777B4F.Up2Date
+ProjectPlanner.Queries.AssemblyInfo.cs
+ProjectPlanner.Queries.AssemblyInfoInputs.cache
+ProjectPlanner.Queries.GeneratedMSBuildEditorConfig.editorconfig
+ProjectPlanner.Queries.GlobalUsings.g.cs
+ProjectPlanner.Queries.assets.cache
+ProjectPlanner.Queries.csproj.AssemblyReference.cache
+ProjectPlanner.Queries.csproj.CoreCompileInputs.cache
+ProjectPlanner.Queries.csproj.FileListAbsolute.txt
+ProjectPlanner.Queries.sourcelink.json
+ProjectPlanner.Queries.csproj.nuget.dgspec.json
+ProjectPlanner.Queries.csproj.nuget.g.props
+ProjectPlanner.Queries.csproj.nuget.g.targets
