--- a/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
+++ b/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 80
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
@@ -19,4 +20,6 @@ RUN dotnet publish "ProjectPlanner.Api.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+# Copy the data files
+COPY ["Data/", "/app/Data/"]
 ENTRYPOINT ["dotnet", "ProjectPlanner.Api.dll"]
