--- a/ProjectPlanner.CQRS/ProjectPlanner.Api/appsettings.json
+++ b/ProjectPlanner.CQRS/ProjectPlanner.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Region": "ap-south-1",
+    "BucketName": "projectplanner-api",
+    "ServiceURL": "https://s3.ap-south-1.amazonaws.com",
+    "Profile": "default",
+    "ActivityDataFileName": "Data/ActivityData.json",
+    "ProjectDataFileName": "Data/ProjectData.json",
+    "Credentials": {
+      "AccessKey": "",
+      "SecretKey": ""
+    }
+  }
 }
