--- a/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
+++ b/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
@@ -5,12 +5,12 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["../ProjectPlanner.Api/ProjectPlanner.Api.csproj", "ProjectPlanner.Api/"]
-COPY ["../ProjectPlanner.Commands/ProjectPlanner.Commands.csproj", "ProjectPlanner.Commands/"]
-COPY ["../ProjectPlanner.Queries/ProjectPlanner.Queries.csproj", "ProjectPlanner.Queries/"]
-COPY ["../ProjectPlanner.Domain/ProjectPlanner.Domain.csproj", "ProjectPlanner.Domain/"]
+COPY ["ProjectPlanner.Api/ProjectPlanner.Api.csproj", "ProjectPlanner.Api/"]
+COPY ["ProjectPlanner.Commands/ProjectPlanner.Commands.csproj", "ProjectPlanner.Commands/"]
+COPY ["ProjectPlanner.Queries/ProjectPlanner.Queries.csproj", "ProjectPlanner.Queries/"]
+COPY ["ProjectPlanner.Domain/ProjectPlanner.Domain.csproj", "ProjectPlanner.Domain/"]
 RUN dotnet restore "ProjectPlanner.Api/ProjectPlanner.Api.csproj"
-COPY .. .
+COPY . .
 WORKDIR "/src/ProjectPlanner.Api"
 RUN dotnet build "ProjectPlanner.Api.csproj" -c Release -o /app/build
 
