--- a/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
+++ b/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
@@ -5,15 +5,21 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["ProjectPlanner.Api.csproj", "ProjectPlanner.Api/"]
-COPY ["../ProjectPlanner.Commands/ProjectPlanner.Commands.csproj", "ProjectPlanner.Commands/"]
-COPY ["../ProjectPlanner.Queries/ProjectPlanner.Queries.csproj", "ProjectPlanner.Queries/"]
-COPY ["../ProjectPlanner.Domain/ProjectPlanner.Domain.csproj", "ProjectPlanner.Domain/"]
+# First copy all project files
+COPY ["./ProjectPlanner.Api/ProjectPlanner.Api.csproj", "ProjectPlanner.Api/"]
+COPY ["./ProjectPlanner.Commands/ProjectPlanner.Commands.csproj", "ProjectPlanner.Commands/"]
+COPY ["./ProjectPlanner.Queries/ProjectPlanner.Queries.csproj", "ProjectPlanner.Queries/"]
+COPY ["./ProjectPlanner.Domain/ProjectPlanner.Domain.csproj", "ProjectPlanner.Domain/"]
+
+# Restore NuGet packages
 RUN dotnet restore "ProjectPlanner.Api/ProjectPlanner.Api.csproj"
-COPY . ProjectPlanner.Api/
-COPY ../ProjectPlanner.Commands/ ProjectPlanner.Commands/
-COPY ../ProjectPlanner.Queries/ ProjectPlanner.Queries/
-COPY ../ProjectPlanner.Domain/ ProjectPlanner.Domain/
+
+# Copy the source code
+COPY ["./ProjectPlanner.Api/", "ProjectPlanner.Api/"]
+COPY ["./ProjectPlanner.Commands/", "ProjectPlanner.Commands/"]
+COPY ["./ProjectPlanner.Queries/", "ProjectPlanner.Queries/"]
+COPY ["./ProjectPlanner.Domain/", "ProjectPlanner.Domain/"]
+
 WORKDIR "/src/ProjectPlanner.Api"
 RUN dotnet build "ProjectPlanner.Api.csproj" -c Release -o /app/build
 
