--- a/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
+++ b/ProjectPlanner.CQRS/ProjectPlanner.Api/Dockerfile
@@ -6,19 +6,19 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 # First copy all project files
-COPY ["./ProjectPlanner.Api/ProjectPlanner.Api.csproj", "ProjectPlanner.Api/"]
-COPY ["./ProjectPlanner.Commands/ProjectPlanner.Commands.csproj", "ProjectPlanner.Commands/"]
-COPY ["./ProjectPlanner.Queries/ProjectPlanner.Queries.csproj", "ProjectPlanner.Queries/"]
-COPY ["./ProjectPlanner.Domain/ProjectPlanner.Domain.csproj", "ProjectPlanner.Domain/"]
+COPY ["../ProjectPlanner.Api/ProjectPlanner.Api.csproj", "ProjectPlanner.Api/"]
+COPY ["../ProjectPlanner.Commands/ProjectPlanner.Commands.csproj", "ProjectPlanner.Commands/"]
+COPY ["../ProjectPlanner.Queries/ProjectPlanner.Queries.csproj", "ProjectPlanner.Queries/"]
+COPY ["../ProjectPlanner.Domain/ProjectPlanner.Domain.csproj", "ProjectPlanner.Domain/"]
 
 # Restore NuGet packages
 RUN dotnet restore "ProjectPlanner.Api/ProjectPlanner.Api.csproj"
 
 # Copy the source code
-COPY ["./ProjectPlanner.Api/", "ProjectPlanner.Api/"]
-COPY ["./ProjectPlanner.Commands/", "ProjectPlanner.Commands/"]
-COPY ["./ProjectPlanner.Queries/", "ProjectPlanner.Queries/"]
-COPY ["./ProjectPlanner.Domain/", "ProjectPlanner.Domain/"]
+COPY ["../ProjectPlanner.Api/", "ProjectPlanner.Api/"]
+COPY ["../ProjectPlanner.Commands/", "ProjectPlanner.Commands/"]
+COPY ["../ProjectPlanner.Queries/", "ProjectPlanner.Queries/"]
+COPY ["../ProjectPlanner.Domain/", "ProjectPlanner.Domain/"]
 
 WORKDIR "/src/ProjectPlanner.Api"
 RUN dotnet build "ProjectPlanner.Api.csproj" -c Release -o /app/build
