--- a/ProjectPlanner.CQRS/ProjectPlanner.DevOps/azure-pipelines.yml
+++ b/ProjectPlanner.CQRS/ProjectPlanner.DevOps/azure-pipelines.yml
@@ -116,13 +116,15 @@ stages:
     - script: |
         echo "Listing repo contents"
         ls -R $(Build.SourcesDirectory)
-      displayName: 'Check repo structure'
+        echo "Moving Dockerfile to solution root"
+        cp $(Build.SourcesDirectory)/ProjectPlanner.Api/Dockerfile $(Build.SourcesDirectory)/Dockerfile
+      displayName: 'Setup build environment'
 
     - task: Docker@2
       inputs:
         command: 'build'
-        Dockerfile: 'ProjectPlanner.Api/Dockerfile'
-        buildContext: '$(Build.SourcesDirectory)/ProjectPlanner.Api'
+        Dockerfile: '**/Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)'
         tags: |
           $(ECR_REPOSITORY):$(IMAGE_TAG)
           $(ECR_REPOSITORY):latest
